[UI] Fix tabular data horizontal overflow bug

--- a/frontend/app/index.css
+++ b/frontend/app/index.css
@@ -122,6 +122,10 @@ form[action$="destroy"] button {
   transition-delay: 200ms;
 }
 
+#detail .tabular {
+  overflow-x: auto;
+}
+
 #header {
   display: flex;
   justify-content: space-between;
